2017-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/SDCCsymt.c:
	  Minor code cleanup, gets rid of a few LLVM warnings.

2017-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8pst.c:
	  Support for break debug instruction, patch by Reto Schneider.

2016-12-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c:
	  add cast to left and right subtree only if they both can be casted.
	* support/regression/tests/bug-2611.c:
	  add a new test case.

2017-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCgen.c,
	  support/regression/tests/bug-2627.c:
	  Fix bug #2627.
	* src/stm8/gen.c:
	  Enable use of execution count in stm8 register allocation cost calculations.

2017-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCopt.c:
	  Execution frequency handling infrastructure.

2017-06-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  .version,
	  src/*/ralloc2.cc:
	  Speed up register allocator.

2017-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCCbitv.h,
	  src/SDCCbitv.c,
	  src/*/ralloc2.cc:
	  Speed up register allocator a bit.

2017-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient >= 32-bit increment for (partially) spilt local variables.

2017-06-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve 16-bit register-to-register transfer,
	  consider cycle cost for register allocation.
	* src/stm8/peeph.def:
	  Improve 16-bit addition with on-stack operand.

2017-06-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/peeph.def:
	  More efficient comparisons.

2017-06-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2621.c:
	  Disable test for ds390, which doesn't have long long.

2017-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/stm8.c:
	  More efficient equality comparisons.
	* support/regression/tests/bug-2621.c:
	  Test for bug #2612.
