@@ -570,12 +570,10 @@ stm8MightRead(const lineNode *pl, const char *what)
   if (!extra)
     {
       if (ISINST (pl->line, "adc")
-        || ISINST (pl->line, "add")
         || ISINST (pl->line, "and")
         || ISINST (pl->line, "bcp") && !ISINST (pl->line, "bcpl")
         || ISINST (pl->line, "cp")
         || ISINST (pl->line, "div")
-        || ISINST (pl->line, "exg")
         || ISINST (pl->line, "mul")
         || ISINST (pl->line, "or")
         || ISINST (pl->line, "rlwa")
@@ -585,8 +583,11 @@ stm8MightRead(const lineNode *pl, const char *what)
         || ISINST (pl->line, "xor"))
           return TRUE;
 
-      if (pl->line[4] == 'a' && (ISINST (pl->line, "cpl")
+      if (pl->line[4] == 'a' &&
+        (ISINST (pl->line, "add")
+        || ISINST (pl->line, "cpl")
         || ISINST (pl->line, "dec")
+        || ISINST (pl->line, "exg")
         || ISINST (pl->line, "inc")
         || ISINST (pl->line, "neg")
         || ISINST (pl->line, "rlc")
@@ -617,7 +618,8 @@ stm8MightRead(const lineNode *pl, const char *what)
       if (pl->line[4] == extra && ((ISINST (pl->line, "div") || ISINST (pl->line, "mul")) && !ISINST (pl->line, "divw")))
         return TRUE;
 
-      if (pl->line[5] == extra && ISINST (pl->line, "addw")
+      if (pl->line[5] == extra &&
+        (ISINST (pl->line, "addw")
         || ISINST (pl->line, "cplw")
         || ISINST (pl->line, "decw")
         || ISINST (pl->line, "incw")
@@ -632,7 +634,7 @@ stm8MightRead(const lineNode *pl, const char *what)
         || ISINST (pl->line, "srlw")
         || ISINST (pl->line, "subw")
         || ISINST (pl->line, "addw")
-        || ISINST (pl->line, "tnzw"))
+        || ISINST (pl->line, "tnzw")))
           return TRUE;
 
       if (pl->line[6] == extra && ISINST (pl->line, "pushw")
@@ -753,10 +755,8 @@ stm8SurelyWrites(const lineNode *pl, const char *what)
   if (!extra)
     {
       if (ISINST (pl->line, "adc")
-        || ISINST (pl->line, "add")
         || ISINST (pl->line, "and")
         || ISINST (pl->line, "div")
-        || ISINST (pl->line, "exg")
         || ISINST (pl->line, "iret")
         || ISINST (pl->line, "or")
         || ISINST (pl->line, "rlwa")
@@ -765,9 +765,12 @@ stm8SurelyWrites(const lineNode *pl, const char *what)
         || ISINST (pl->line, "xor"))
           return TRUE;
 
-      if (pl->line[4] == 'a' && (ISINST (pl->line, "clr")
+      if (pl->line[4] == 'a' &&
+        (ISINST (pl->line, "add")
+        || ISINST (pl->line, "clr")
         || ISINST (pl->line, "cpl")
         || ISINST (pl->line, "dec")
+        || ISINST (pl->line, "exg")
         || ISINST (pl->line, "inc")
         || ISINST (pl->line, "neg")
         || ISINST (pl->line, "pop")
